# object_trajectory_estimator

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/basketball_motion/: least_square.hpp  recursive_least_square.hpp
include/bouncing_ball_estimator/: bouncing_ball_estimator_nodelet.h  recursive_least_square.hpp  sphere_fitting.h
include/object_trajectory_estimator/: depth_min.h  object_trajectory_estimator.hpp  object_trajectory_estimator_nodelet.h  recursive_least_square.hpp  sphere_fitting.h
launch/: basketball_vision.launch  boucing_ball_estimator.launch  nodelet_manager.launch  object_trajectory_estimator.launch  update_camera_frame.launch
msg/: BallStateStamped.msg
src/: bouncing_ball_estimator_nodelet.cpp  depth_min.cpp  get_rls_param.cpp  least_square.cpp  object_trajectory_estimator.cpp  object_trajectory_estimator_nodelet.cpp  recursive_least_square.cpp  set_rls_matrix.cpp  set_rls_param.cpp  sphere_fitting.cpp
srv/: GetRLSParameters.srv  SetRLSMatrix.srv  SetRLSParameters.srv
